trackelement: Sort paramspec by name in list_children_properties

https://bugzilla.gnome.org/show_bug.cgi?id=720023